Fix last row line number overflow issue in diff2html block

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -657,6 +657,12 @@ footer.sticky-bottom {
   }
 }
 
+// diff2html - Fix for diff2html line number overflow
+
+.d2h-diff-table {
+  position: relative;
+}
+
 // Distill
 
 .distill {
